--- a/polars/package.json
+++ b/polars/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@finanzchef24/stats-server",
+  "name": "Example",
   "version": "1.0.0",
   "main": "dist/index.js",
   "description": "Experimental API",
@@ -7,35 +7,31 @@
   "license": "MIT",
   "scripts": {
     "dev": "cross-env NODE_ENV=development ts-node-dev --exit-child --respawn src/main.ts",
-    "start": "ts-node src/main.ts",
+    "start": "node ./dist/main.js",
     "runit": "ts-node-dev src/main.ts",
+    "pl": "ts-node-dev polars.ts",
     "build": "tsc -p .",
     "prettier:format": "prettier --write \"src/**/*.ts\"",
     "prettier:check": "prettier --check \"src/**/*.ts\"",
     "lint": "yarn run prettier:check && eslint \"src/**/*.ts\"",
     "lint:fix": "yarn run prettier:format && eslint \"src/**/*.ts\" --fix"
   },
+  "resolutions": {
+    "graphql": "^16.4.0",
+    "**/graphql": "^16.4.0"
+  },
   "devDependencies": {
-    "@graphql-codegen/typescript-resolvers": "^2.7.7",
     "@types/node": "^18.11.9",
     "cross-env": "^7.0.3",
-    "prisma": "^4.7.0",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.3"
   },
   "dependencies": {
     "@graphql-tools/schema": "^9.0.10",
-    "@prisma/client": "^4.7.0",
-    "@types/cors": "^2.8.12",
-    "@types/express": "^4.17.14",
-    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "express-graphql": "^0.12.0",
-    "graphql": "^16.6.0",
+    "graphql": "^16.0.0",
     "graphql-yoga": "^3.1.0",
-    "mysql2": "^2.3.3",
-    "prettier": "^2.8.1"
+    "nodejs-polars": "^0.4.1"
   }
 }
